deploy/k8s/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - image: auth
        imagePullPolicy: Never
        name: auth-container
        resources:
          requests:
            cpu: "250m"
            memory: "128M"
          limits:
            cpu: "500m"
            memory: "256M"
        livenessProbe:
          httpGet:
            path: /_status/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/healthz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort: 3000
          name: auth-http
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - name: auth-http
    port: 80
    targetPort: 3000
