deploy/k8s/notification.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
  labels:
    name: notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - image: notification
        imagePullPolicy: Never
        name: notification-server
        resources:
          requests:
            cpu: "150m"
            memory: "100M"
          limits:
            cpu: "300m"
            memory: "200M"
        livenessProbe:
          httpGet:
            path: /_status/healthz
            port: 4000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/healthz
            port: 4000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort: 4000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 4000
