deploy/k8s/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels:
    name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3-alpine
        name: rabbitmq
        resources:
          requests:
            cpu: "100m"
            memory: "200M"
          limits:
            cpu: "500m"
            memory: "500M"
        ports:
        - containerPort: 5672
          name: amqp
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  type: ClusterIP
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
