deploy/k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:7-alpine
        name: redis
        resources:
          requests:
            cpu: "100m"
            memory: "100M"
          limits:
            cpu: "300m"
            memory: "300M"
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
