deploy/k8s/router.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router-deployment
  labels:
    name: router-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
      - image: router
        imagePullPolicy: Never
        name: router-server
        resources:
          requests:
            cpu: "250m"
            memory: "250M"
          limits:
            cpu: "500m"
            memory: "500M"
        livenessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/status/readyz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: router-service
  labels:
    app: router
spec:
  selector:
    app: router
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
